--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Climate Solutions</title>
-    <link rel="stylesheet" href="/css/main.css" />
+    <link href="/css/main.css" rel="stylesheet">
   </head>
   <body class="bg-gray-100">
   <!-- Navbar -->
