--- a/public/views/about.html
+++ b/public/views/about.html
@@ -46,7 +46,7 @@
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
         <!-- Image -->
         <div class="flex justify-center items-center">
-          <img src="/img/snorlax_rest.png" alt="Profile Image" class="w-[75%] h-auto object-cover">
+          <img src="/img/snorlax.png" alt="Profile Image" class="w-[75%] h-auto object-cover">
         </div>
 
         <!-- About Me -->
